test/fail/if-stmt-value.rnp
if true {
  1
} else {
  2
}
---
TypeError: Expected void but got number
 --> fail/if-stmt-value.rnp:1:1
  |
1 | / if true {
2 | |   1
3 | | } else {
4 | |   2
5 | | }
  | |_^ Expected void but got number
  |
